2021-03-10  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.8 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8: Death Valley';git push
	git tag -a 4.9.8 -m 'ncap2: array(); ncclimo: mth_srt/end, sbs mali, xcl_var; ncks: s1d pft med; ncremap: tll fix sgs, s1d, fix nfr MALI, US/VS wrn';git push --tags

	* ncclimo in MPI-mode do not override user-requested job_nbr in monthly climo mode anymore

2021-03-09  Charlie Zender  <zender@uci.edu>

	* nco.texi document new mth_srt/end options

2021-03-08  Charlie Zender  <zender@uci.edu>

	* ncclimo fix implementation of --xcl_var

2021-03-04  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.8-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8-beta01: Moderna';git push
	git tag -a 4.9.8-beta01 -m 'ncremap mali nVertInterfaces, ncks fix s1d omp g++';git push --tags

	* S1D: fix OpenMP clause for g++

2021-02-26  Charlie Zender  <zender@uci.edu>

	* Pedro improves CMakeLists.txt to install nces.exe and ncrcat.exe on Windows

	* ncremap add nVertInterfaces, maxEdges to known MALI dimensions

2021-02-25  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.8-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha04: Pernil';git push
	git tag -a 4.9.8-alpha04 -m 'ncap2: array() fix; ncclimo: mth_srt/end doc, mali; ncremap mali, mss_val';git push --tags

	* ncremap autoset mss_val=-1.0e36 for MALI

	* ncclimo/ncremap add mali as valid mdl_nm and prc_typ

	* ncap2 replace array() number generation algorithm to from iterative addition to multiplication to reduce round-off error

	* ncclimo fix empty mth_flg bug

2021-02-15  Charlie Zender  <zender@uci.edu>

	* ncclimo document --mth_[srt/end] internally, in man pages

2021-02-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.8-alpha03: Culloden';git push
	git tag -a 4.9.8-alpha03 -m 'ncclimo: mth_srt/end sbs; ncremap: tll fix sgs s1d, fix nfr MALI';git push --tags
