@@ -25756,10 +25756,13 @@ For instance, to automatically permute the dimensions in the data file
 prior to regridding for a limited (though growing) number of data-file
 types that encounter the @command{ncremap} limitation concerning
 dimension ordering. 
-Valid procedure types are @samp{airs} for @acronym{NASA AIRS} satellite data, 
-@samp{elm} or @samp{clm} @acronym{DOE ELM} and @acronym{NCAR CLM} model data,
-@samp{cice} for @acronym{CICE} ice model data on 2D grids,
-@samp{mpas} for @acronym{MPAS} ocean/ice model data on unstructured grids,
+Valid procedure types include @samp{airs} for @acronym{NASA AIRS} satellite data, 
+@samp{eam} or @samp{cam} for @acronym{DOE EAM} and @acronym{NCAR CAM} model data,
+@samp{elm} or @samp{clm} for @acronym{DOE ELM} and @acronym{NCAR CLM} model data,
+@samp{cice} for @acronym{CICE} ice model data (must be on 2D grids),
+@samp{cism} for @acronym{NCAR CISM} land ice model data,
+@samp{mpascice}, @samp{mpasseaice}, @samp{mpas-seaice}, or @samp{mpassi} for @acronym{MPAS} sea-ice model data,
+@samp{mpaso} or @samp{mpas-ocean} for @acronym{MPAS} ocean model data,
 @samp{mod04} for @w{Level 2} @acronym{MODIS} @acronym{MOD04} product,
 @samp{mwf} for making all weight-files for a pair of grids, 
 @samp{sgs} for datasets containing sub-gridscale (@acronym{SGS}) data
@@ -25767,7 +25770,7 @@ Valid procedure types are @samp{airs} for @acronym{NASA AIRS} satellite data,
 @acronym{CICE/MPAS-Seaice} sea-ice model data), 
 and @samp{nil} (for none).
 The default @var{prc_typ} is @samp{nil}, which means @command{ncremap} 
-does not perform any special procedure prior to regridding.
+does not perform any special procedures prior to regridding.
 The @acronym{AIRS} procedure calls @command{ncpdq} to permute dimensions
 from their order in the input file to this order: 
 @code{StdPressureLev,GeoTrack,GeoXTrack}.
@@ -25775,9 +25778,9 @@ The @acronym{ELM}, @acronym{CLM}, and @acronym{CICE} procedures set
 idiosyncratic model values and then invoke the Sub-gridscale
 (@acronym{SGS}) procedure (see below). 
 The @acronym{MOD04} procedure unpacks input data.
-The @acronym{MPAS} procedure permutes input data dimensions into this
+The @acronym{MPAS} procedures permute input data dimensions into this
 order: 
-@code{Time,depth,nVertLevels,nVertLevelsP1,maxEdges,MaxEdges2,nCategories,R3,ONE,TWO,FOUR,nEdges,nCells},
+@code{Time,depth,nVertInterfaces,nVertLevels,nVertLevelsP1,nZBGCTracers,nBioLayersP1,nAlgaeIceLayers,nDisIronIceLayers,nIceLayers,maxEdges,MaxEdges2,nCategories,R3,ONE,TWO,FOUR,nEdges,nCells},
 and invokes renormalization.
 An @acronym{MPAS} dataset that contains any other dimensions will fail
 to regrid until/unless those dimensions are added to the
